--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="layer">
                     <h3>Web App Design</h3>
                     <p>This web application connects you to a gym instructor, who will give you tips to get to your body goal </p>
-                    <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/ikxneng/TechCon_HTML"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work-2">
@@ -122,7 +122,7 @@
                 <div class="layer">
                     <h3>Portfolio</h3>
                     <p>This web application connects you to a gym instructor, who will give you tips to get to your body goal </p>
-                    <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/ikxneng/personal-portfolio"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -133,7 +133,7 @@
                     <a href="https://www.instagram.com/ikanshoot.jpeg?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+
         </div>
 </div>
 <!------Contact--------->
@@ -163,8 +163,8 @@
             </div>
         </div>
     </div>
-    <div class="copyright">
-        <p> Copyright (c) 2024 Ikaneng. </p>
+    <div>
+        <p class="copyright"> Copyright (c) 2024 Ikaneng. </p>
     </div>
 
 </div>
