--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikaneng's Portfolio</title>
-    <link rel="icon" type="image/png" href="images/background copy.png" />
+    <link rel="icon" type="image/png" href="public/background copy.png" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3ba6f37d7b.js" crossorigin="anonymous"></script>
 </head>
